# mymodule-wow

./: README.md  mymodule.py  pyproject.toml
