[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mymodule-wow"
version = "0.1.0"
description = "My awesome handmade module"
readme = "README.md"
authors = [{name = "Noah Ohayon"}]
requires-python = ">=3.7"

[tool.setuptools]
py-modules = ["mymodule"]